--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <header>
         <h1>Welcome to Our Pet Salon!</h1>
         <p id="registeredPetsCount">
+          <a href="register.html"> Register a Pet</a>
           <!-- number of pets will go here-->
-          Registered Pets: <span id="count">None</span>
+          Registered Pets: <span id="count">0</span>
         </p>
       </header>
     </section>
