--- a/about.html
+++ b/about.html
@@ -11,23 +11,21 @@
       <div class="header-container">
         <h1>About Our Pet salon</h1>
         <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="register.html">Register</a></li>
-          </ul>
+          <a href="index.html">Home</a>
+          <a href="register.html">Register</a>
         </nav>
       </div>
     </header>
 
     <main>
       <section class="team">
-        <h2>Welcome to Our Pet Salon</h2>
-        <div id="moreDetails" class="hidden">
+        <div>
+          <h2>Welcome to Our Pet Salon</h2>
           <p>We take pride in grooming and caring for your pets...</p>
           <p>Our team consists of experienced and certified pet groomers...</p>
           <p>We offer a variety of services to cater to your pet's needs...</p>
           <p>Visit us today and experience the difference!</p>
-          <button id="toggleDetails">Show More</button>
+          <button class="toggleDetails">Show More</button>
         </div>
       </section>
 
@@ -69,7 +67,7 @@
               <img src="imgs/download (12).jpeg" alt="small animals Image" />
             </div>
             <span class="pet-type">
-              <p>Cat</p>
+              <p>Small Animals</p>
             </span>
             <p>Description about services</p>
           </li>
@@ -77,7 +75,7 @@
       </section>
 
       <section class="team">
-        <h2>Meet Our Team</h2>
+        <h2 class="teampics">Meet Our Team</h2>
         <div class="team-members">
           <div class="team-member">
             <img src="imgs/small-4023176_640.jpg" alt="Team Member 1" />
