--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip ex ea commodo consequat.
         </p>
-        <a href="#">More About us</a>
+        <a href="about.html">More About us</a>
       </div>
       <ul class="social">
         <li>
@@ -53,5 +53,7 @@
     </div>
 
     <script src="scriptsPS/navbar.js"></script>
+    <script src="/scriptsPS/register.js"></script>
+    <script src="/scriptsPS/display.js"></script>
   </body>
 </html>
