--- a/register.html
+++ b/register.html
@@ -28,8 +28,10 @@
         <p>
           Please register your Pet so we may schedule you for an appointment
         </p>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+        </nav>
       </header>
       <form id="petForm">
         <div class="row justify-content-center">
@@ -136,7 +138,7 @@
         </div>
         <div id="deleteButtons"></div>
       </section>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
       <script src="/scriptsPS/register.js"></script>
       <script src="/scriptsPS/display.js"></script>
     </div>
