added alt for images

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="/petsalon.css/salonstyles.css" />
   </head>
   <body>
-    <!-- biggest container positive 1-2 -->
-    <!-- background video and pet count-->
-
     <section class="showcase">
       <header>
         <h2 class="logo">Pet Salon</h2>
@@ -20,6 +17,7 @@
         muted
         loop
         autoplay
+        alt="video of a dog being washed"
       ></video>
       <div class="overlay"></div>
       <div class="text">
@@ -35,13 +33,19 @@
       </div>
       <ul class="social">
         <li>
-          <a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png" /></a>
+          <a href="#"
+            ><img src="https://i.ibb.co/x7P24fL/facebook.png" alt="facebook"
+          /></a>
         </li>
         <li>
-          <a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" /></a>
+          <a href="#"
+            ><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" alt="twitter"
+          /></a>
         </li>
         <li>
-          <a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png" /></a>
+          <a href="#"
+            ><img src="https://i.ibb.co/ySwtH4B/instagram.png" alt="instagram"
+          /></a>
         </li>
       </ul>
     </section>
