--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Pet Salon</title>
+    <title>Pet Salon</title>
     <link rel="stylesheet" href="petsalon.css/styles.css" />
   </head>
   <body>
     <header>
       <div class="header-container">
-        <h1>About Our Pet salon</h1>
+        <h1>About Us</h1>
         <nav>
           <a href="index.html">Home</a>
           <a href="register.html">Register</a>
